Sup Conf und Regeldarstellung