@@ -1,18 +1,15 @@
-package application;
-	
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.LinkedList;
 
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
-import javafx.util.Pair;
 
 /**
  * @author Andrej Morlang (2000435)
@@ -21,15 +18,10 @@ import javafx.util.Pair;
 
 public class InhaltVerwaltung {
 
-	//TODO ?
-	public int Konvertieren(String inhalt) {
-		return 0;
-	}
-
 	public LinkedList<LinkedList<LinkedList<Integer>>> apriori(String inhalte[][], double minSup, double minConf, int hoehe, int waren) {
 		int itemcount[] = new int[waren];
 		for (int j = 0; j < waren; j++) {
-			itemcount[j]=0;
+			itemcount[j] = 0;
 		}
 		for (int i = 0; i < hoehe; i++) {
 			for (int j = 0; j < waren; j++) {
@@ -42,69 +34,69 @@ public class InhaltVerwaltung {
 		LinkedList<LinkedList<Integer>> kandidatenSup = new LinkedList<LinkedList<Integer>>();
 		kandidaten.add(new LinkedList<LinkedList<Integer>>());
 		kandidatenSup.add(new LinkedList<Integer>());
-		
+
 		Double sup = new Double(0);
 		for (int j = 0; j < waren; j++) {
-			sup=((double) itemcount[j]/(double) hoehe);
-			if (sup>=minSup) {
+			sup = ((double) itemcount[j] / (double) hoehe);
+			if (sup >= minSup) {
 				kandidaten.get(0).add(new LinkedList<Integer>());
 				kandidatenSup.get(0).add(itemcount[j]);
 				kandidaten.get(0).getLast().add(j);
-//				System.out.println(j + " ist Frequent Item");
+				//				System.out.println(j + " ist Frequent Item");
 			}
 		}
-		
-		for (int kandidatenlaenge=2;kandidatenlaenge<=waren;kandidatenlaenge++) {
+
+		for (int kandidatenlaenge = 2; kandidatenlaenge <= waren; kandidatenlaenge++) {
 			kandidaten.add(new LinkedList<LinkedList<Integer>>());
 			kandidatenSup.add(new LinkedList<Integer>());
 			/* Kandidaten Generierung */
-			LinkedList<LinkedList<Integer>> frequentItemKMinus1 = kandidaten.get(kandidatenlaenge-2);
-			if (frequentItemKMinus1.size()>0) {				
-				for (int frequentItemsI=0;frequentItemsI<frequentItemKMinus1.size()-1;frequentItemsI++) {
+			LinkedList<LinkedList<Integer>> frequentItemKMinus1 = kandidaten.get(kandidatenlaenge - 2);
+			if (frequentItemKMinus1.size() > 0) {
+				for (int frequentItemsI = 0; frequentItemsI < frequentItemKMinus1.size() - 1; frequentItemsI++) {
 					LinkedList<Integer> frequentItemPre = frequentItemKMinus1.get(frequentItemsI);
-					for (int frequentItemsJ=frequentItemsI+1;frequentItemsJ<frequentItemKMinus1.size();frequentItemsJ++) {
+					for (int frequentItemsJ = frequentItemsI + 1; frequentItemsJ < frequentItemKMinus1.size(); frequentItemsJ++) {
 						boolean sameStartItems = true;
 						LinkedList<Integer> frequentItemThis = frequentItemKMinus1.get(frequentItemsJ);
-						for (int checkItem=0;checkItem<frequentItemThis.size()-1;checkItem++) {
-							if (frequentItemThis.get(checkItem)!=frequentItemPre.get(checkItem)) {
+						for (int checkItem = 0; checkItem < frequentItemThis.size() - 1; checkItem++) {
+							if (frequentItemThis.get(checkItem) != frequentItemPre.get(checkItem)) {
 								sameStartItems = false;
 							}
 						}
 						if (sameStartItems) {
 							kandidaten.getLast().add(new LinkedList<Integer>());
 							kandidatenSup.getLast().add(0);
-							for (int checkItem=0;checkItem<frequentItemThis.size()-1;checkItem++) {
+							for (int checkItem = 0; checkItem < frequentItemThis.size() - 1; checkItem++) {
 								kandidaten.getLast().getLast().add(frequentItemThis.get(checkItem));
 							}
-							if (frequentItemThis.get(frequentItemThis.size()-1)>frequentItemPre.get(frequentItemPre.size()-1)) {
-								kandidaten.getLast().getLast().add(frequentItemPre.get(frequentItemPre.size()-1));
-								kandidaten.getLast().getLast().add(frequentItemThis.get(frequentItemThis.size()-1));
+							if (frequentItemThis.get(frequentItemThis.size() - 1) > frequentItemPre.get(frequentItemPre.size() - 1)) {
+								kandidaten.getLast().getLast().add(frequentItemPre.get(frequentItemPre.size() - 1));
+								kandidaten.getLast().getLast().add(frequentItemThis.get(frequentItemThis.size() - 1));
 							} else {
-								kandidaten.getLast().getLast().add(frequentItemThis.get(frequentItemThis.size()-1));
-								kandidaten.getLast().getLast().add(frequentItemPre.get(frequentItemPre.size()-1));
+								kandidaten.getLast().getLast().add(frequentItemThis.get(frequentItemThis.size() - 1));
+								kandidaten.getLast().getLast().add(frequentItemPre.get(frequentItemPre.size() - 1));
 							}
-//							System.out.println(kandidaten.getLast().getLast()+" ist Kandidat");
+							//							System.out.println(kandidaten.getLast().getLast()+" ist Kandidat");
 							/* "Pruning" behalte den Kandiaten nur wenn alle k-1-elementigen Teilmenge FIs sind */
-							int ohneItem = kandidaten.getLast().getLast().size()-3;
-							for (int frequentItemsK=0;frequentItemsK<frequentItemKMinus1.size();frequentItemsK++) {
+							int ohneItem = kandidaten.getLast().getLast().size() - 3;
+							for (int frequentItemsK = 0; frequentItemsK < frequentItemKMinus1.size(); frequentItemsK++) {
 								LinkedList<Integer> frequentItemCheck = frequentItemKMinus1.get(frequentItemsK);
-								for (int itemsCheck=0;itemsCheck<frequentItemCheck.size();itemsCheck++) {
-									if (ohneItem>0) {
-										if (itemsCheck<ohneItem) {
-											if (frequentItemCheck.get(itemsCheck)==kandidaten.getLast().getLast().get(itemsCheck)) {
+								for (int itemsCheck = 0; itemsCheck < frequentItemCheck.size(); itemsCheck++) {
+									if (ohneItem > 0) {
+										if (itemsCheck < ohneItem) {
+											if (frequentItemCheck.get(itemsCheck) == kandidaten.getLast().getLast().get(itemsCheck)) {
 												ohneItem--;
 											}
 										} else {
-											if (frequentItemCheck.get(itemsCheck)==kandidaten.getLast().getLast().get(itemsCheck+1)) {
+											if (frequentItemCheck.get(itemsCheck) == kandidaten.getLast().getLast().get(itemsCheck + 1)) {
 												ohneItem--;
 											}
 										}
 									}
 								}
 							}
-							if (ohneItem>0) {
+							if (ohneItem > 0) {
 								kandidaten.getLast().getLast().removeLast();
-//								System.out.println("...doch nicht");
+								//								System.out.println("...doch nicht");
 							}
 						}
 					}
@@ -113,116 +105,116 @@ public class InhaltVerwaltung {
 			/* Kandidaten Generierung beendet */
 			/* zaehlen */
 			for (int i = 0; i < hoehe; i++) {
-				for (int j = 0; j< kandidaten.getLast().size(); j++) {
-					boolean matches=true;
+				for (int j = 0; j < kandidaten.getLast().size(); j++) {
+					boolean matches = true;
 					int k = 0;
-					while (k<kandidaten.getLast().get(j).size() & matches) {
+					while (k < kandidaten.getLast().get(j).size() & matches) {
 						if (!inhalte[i][kandidaten.getLast().get(j).get(k)].equals(String.valueOf(1))) {
-							matches=false;
+							matches = false;
 						}
 						k++;
 					}
 					if (matches) {
-						kandidatenSup.getLast().set(j,kandidatenSup.getLast().get(j)+1);
-//						System.out.println("Kandidat " + kandidaten.getLast().get(j) + " gefunden " + kandidatenSup.getLast().get(j));						
+						kandidatenSup.getLast().set(j, kandidatenSup.getLast().get(j) + 1);
+						//						System.out.println("Kandidat " + kandidaten.getLast().get(j) + " gefunden " + kandidatenSup.getLast().get(j));						
 					}
 				}
 			}
-			for (int j = 0; j< kandidaten.getLast().size(); j++) {
-				sup=((double) kandidatenSup.getLast().get(j)/(double) hoehe);
-				if (sup<minSup) {
-//					System.out.println(kandidaten.getLast().get(j) + " ist kein Frequent Itemset");
+			for (int j = 0; j < kandidaten.getLast().size(); j++) {
+				sup = ((double) kandidatenSup.getLast().get(j) / (double) hoehe);
+				if (sup < minSup) {
+					//					System.out.println(kandidaten.getLast().get(j) + " ist kein Frequent Itemset");
 					kandidaten.getLast().remove(j);
 					kandidatenSup.getLast().remove(j);
 					j--;
 				} else {
-					System.out.println(kandidaten.getLast().get(j) + ": " + kandidatenSup.getLast().get(j));					
+					System.out.println(kandidaten.getLast().get(j) + ": " + kandidatenSup.getLast().get(j));
 				}
 			}
-		}		
+		}
 		LinkedList<LinkedList<LinkedList<Integer>>> regeln = new LinkedList<LinkedList<LinkedList<Integer>>>();
 
 		/* moegliche Regeln aufstellen */
-		int anzahlRegeln=0;
-		for (int i = 1; i< kandidaten.size(); i++) {
-			for (int j = 0; j< kandidaten.get(i).size(); j++) {
-				for (int k = 0; k< kandidaten.get(i).get(j).size(); k++) {
+		int anzahlRegeln = 0;
+		for (int i = 1; i < kandidaten.size(); i++) {
+			for (int j = 0; j < kandidaten.get(i).size(); j++) {
+				for (int k = 0; k < kandidaten.get(i).get(j).size(); k++) {
 					regeln.add(new LinkedList<LinkedList<Integer>>());
 					anzahlRegeln++;
 					regeln.getLast().add(new LinkedList<Integer>());
 					regeln.getLast().getLast().add(kandidaten.get(i).get(j).get(k));
 					regeln.getLast().add(new LinkedList<Integer>());
-					for (int l = 0; l< kandidaten.get(i).get(j).size(); l++) {
-						if (l!=k) {
+					for (int l = 0; l < kandidaten.get(i).get(j).size(); l++) {
+						if (l != k) {
 							regeln.getLast().getLast().add(kandidaten.get(i).get(j).get(l));
 						}
 					}
-					/* zaehler fuer den linken Teil der Regel*/
+					/* zaehler fuer den linken Teil der Regel */
 					regeln.getLast().add(new LinkedList<Integer>());
 					regeln.getLast().getLast().add(0);
 					/* zaehler fuer die Regel, schon bekannt */
 					regeln.getLast().add(new LinkedList<Integer>());
 					regeln.getLast().getLast().add(kandidatenSup.get(i).get(j));
-					System.out.println(regeln.getLast().get(0) + " " + regeln.getLast().get(1));					
-				}				
-			}			
+					System.out.println(regeln.getLast().get(0) + " " + regeln.getLast().get(1));
+				}
+			}
 		}
-		for (int i = 0; i< regeln.size(); i++) {
-			if (regeln.get(i).get(1).size()>1) {				
-				for (int j = 0; j< regeln.get(i).get(1).size(); j++) {
+		for (int i = 0; i < regeln.size(); i++) {
+			if (regeln.get(i).get(1).size() > 1) {
+				for (int j = 0; j < regeln.get(i).get(1).size(); j++) {
 					regeln.add(new LinkedList<LinkedList<Integer>>());
 					anzahlRegeln++;
 					regeln.getLast().add(new LinkedList<Integer>());
-					for (int k = 0; k< regeln.get(i).get(0).size(); k++) {
+					for (int k = 0; k < regeln.get(i).get(0).size(); k++) {
 						regeln.getLast().getLast().add(regeln.get(i).get(0).get(k));
 					}
 					regeln.getLast().getLast().add(regeln.get(i).get(1).get(j));
 					regeln.getLast().add(new LinkedList<Integer>());
-					for (int k = 0; k< regeln.get(i).get(1).size(); k++) {
-						if (j!=k) {
-							regeln.getLast().getLast().add(regeln.get(i).get(1).get(k));						
+					for (int k = 0; k < regeln.get(i).get(1).size(); k++) {
+						if (j != k) {
+							regeln.getLast().getLast().add(regeln.get(i).get(1).get(k));
 						}
-					}				
-					/* zaehler fuer den linken Teil der Regel*/
+					}
+					/* zaehler fuer den linken Teil der Regel */
 					regeln.getLast().add(new LinkedList<Integer>());
 					regeln.getLast().getLast().add(0);
 					/* zaehler fuer die Regel, schon bekannt */
 					regeln.getLast().add(new LinkedList<Integer>());
 					regeln.getLast().getLast().add(regeln.get(i).get(3).get(0));
-				}		
+				}
 			}
 		}
 		System.out.println(anzahlRegeln + " moegliche Regeln ");
 		/* linke Seite der Regeln ermitteln */
-		for (int i = 0; i< regeln.size(); i++) {
-			boolean matches=false;
+		for (int i = 0; i < regeln.size(); i++) {
+			boolean matches = false;
 			int j = 0;
-			while (j< kandidaten.get(regeln.get(i).get(0).size()-1).size() & !matches) {
+			while (j < kandidaten.get(regeln.get(i).get(0).size() - 1).size() & !matches) {
 				matches = true;
-				for (int k = 0; k< regeln.get(i).get(0).size(); k++) {
-					if (kandidaten.get(regeln.get(i).get(0).size()-1).get(j).get(k)!=regeln.get(i).get(0).get(k)) {
-						matches=false;
+				for (int k = 0; k < regeln.get(i).get(0).size(); k++) {
+					if (kandidaten.get(regeln.get(i).get(0).size() - 1).get(j).get(k) != regeln.get(i).get(0).get(k)) {
+						matches = false;
 					}
 				}
 				if (matches) {
-					regeln.get(i).get(2).set(0,kandidatenSup.get(regeln.get(i).get(0).size()-1).get(j));					
+					regeln.get(i).get(2).set(0, kandidatenSup.get(regeln.get(i).get(0).size() - 1).get(j));
 				}
 				j++;
 			}
-			
+
 		}
 
 		/* Konfidenz berechnen */
 
-		for (int i = 0; i< regeln.size(); i++) {
-			double conf=((double) regeln.get(i).get(3).get(0)/(double) regeln.get(i).get(2).get(0));
-			if (conf<minConf) {
+		for (int i = 0; i < regeln.size(); i++) {
+			double conf = ((double) regeln.get(i).get(3).get(0) / (double) regeln.get(i).get(2).get(0));
+			if (conf < minConf) {
 				regeln.remove(i);
 				i--;
 			} else {
 				System.out.println(regeln.get(i).get(0) + " " + regeln.get(i).get(1) + " " + regeln.get(i).get(2) + " " + regeln.get(i).get(3));
-			}			
-		}	
+			}
+		}
 		System.out.println(regeln.size() + " Regeln gefunden");
 		return regeln;
 	}
@@ -262,7 +254,7 @@ public class InhaltVerwaltung {
 	//--- Ermittle die moeglichen Werte in den Feldern und zaehle Sie---
 	public LinkedList<HashMap<String, Integer>> werteErmitteln(List<String> dateiinhalt, int breite, int waren) {
 		LinkedList<HashMap<String, Integer>> werte = new LinkedList<HashMap<String, Integer>>();
-		for (int i = 0; i < breite+1; i++) {
+		for (int i = 0; i < breite + 1; i++) {
 			werte.add(new HashMap<String, Integer>());
 		}
 
@@ -284,9 +276,9 @@ public class InhaltVerwaltung {
 					int warensumme = 0;
 					for (int horizontal = 0; horizontal < breite; horizontal++) {
 						if (werte.get(horizontal).containsKey(x[horizontal])) {
-							werte.get(horizontal).put(x[horizontal], werte.get(horizontal).get(x[horizontal])+1);							
+							werte.get(horizontal).put(x[horizontal], werte.get(horizontal).get(x[horizontal]) + 1);
 						} else {
-							werte.get(horizontal).put(x[horizontal], 1);							
+							werte.get(horizontal).put(x[horizontal], 1);
 						}
 						if (horizontal < waren) {
 							if (x[horizontal].equals("1")) {
@@ -295,9 +287,9 @@ public class InhaltVerwaltung {
 						}
 					}
 					if (werte.get(breite).containsKey(((Integer) warensumme).toString())) {
-						werte.get(breite).put(((Integer) warensumme).toString(), werte.get(breite).get(((Integer) warensumme).toString())+1);							
+						werte.get(breite).put(((Integer) warensumme).toString(), werte.get(breite).get(((Integer) warensumme).toString()) + 1);
 					} else {
-						werte.get(breite).put(((Integer) warensumme).toString(), 1);							
+						werte.get(breite).put(((Integer) warensumme).toString(), 1);
 					}
 					vertikal++;
 				}
@@ -325,12 +317,12 @@ public class InhaltVerwaltung {
 					fehlerhaft++;
 				} else {
 					boolean nutzeDatensatz = true;
-					if (filterFeld>-1 & filterFeld<daten) {
-						if (!x[waren+filterFeld].equals(filterWert)) {
+					if (filterFeld > -1 & filterFeld < daten) {
+						if (!x[waren + filterFeld].equals(filterWert)) {
 							nutzeDatensatz = false;
 						}
 					}
-					if (nutzeDatensatz) {						
+					if (nutzeDatensatz) {
 						for (int horizontal = 0; horizontal < breite; horizontal++) {
 							inhalte[vertikal][horizontal] = x[horizontal];
 						}
@@ -339,7 +331,7 @@ public class InhaltVerwaltung {
 				}
 			}
 		}
-		System.out.println("Es gibt " + fehlerhaft + " fehlerhafte Dateninhalte.");
+		//		System.out.println("Es gibt " + fehlerhaft + " fehlerhafte Dateninhalte.");
 		System.out.println(vertikal + " Datensaetze wurden uebergeben.");
 		return vertikal;
 	}
@@ -388,8 +380,8 @@ public class InhaltVerwaltung {
 			//- Betrachte nur die mit Attributen gefuellten Zeilen -
 			if (information.startsWith("0") || information.startsWith("1")) {
 				hoehe++;
-				//- Testausgabe -
-				System.out.println(information);
+				//				//- Testausgabe -
+				//				System.out.println(information);
 			}
 		}
 		groessen[0] = hoehe;
@@ -419,8 +411,8 @@ public class InhaltVerwaltung {
 				//- Leere Zeilen werden nicht gespeichert. -
 				if (output.trim().equals("") == false) {
 					dateiinhalt.add(output);
-					//- Testausgabe -
-					System.out.println(output);
+					//					//- Testausgabe -
+					//					System.out.println(output);
 				}
 			}
 			input.close();
